 * Added support for the AMT (Automatic Multicast Tunneling) Protocol
 * Added support for the Gopher Protocol
 * Added avaudiocapture module as a replacement for qtsound, which is removed now
 * Audio CD data tracks are now correctly detected and skipped
 * Deprecates Audio CD CDDB lookups in favor of more accurate Musicbrainz
 * Improved CD-TEXT and added Shift-JIS encoding support

Access output:
 * Added support for the RIST (Reliable Internet Stream Transport) Protocol

Video output:
 * Added X11 RENDER video output plugin
 * Remove aa plugin
 * Remove evas plugin
 * Remove omxil_vout plugin
 * Remove RealRTSP plugin
 * Remove Real demuxer plugin
 * Fix washed out black on NVIDIA cards with Direct3D9

Video filter:
 * Update yadif
 * Remove remote OSD plugin

Stream output:
 * New SDI output with improved audio and ancillary support.
   Candidate for deprecation of decklink vout/aout modules.
 * Support for DLNA/UPNP renderers

Muxers:
 * MP4 files are no longer faststart by default

Service discovery:
 * Support Renderer discovery with avahi

macOS:
 * Remove Growl notification support
 * Improved AppleScript API with support for playback modes, recording, rate

appleOS:
 * Improved proxy configuration handling


Changes between 3.0.9.2 and 3.0.10:
----------------------------------

Misc:
 * Update Twitch & VLSub scripts


Changes between 3.0.9.1 and 3.0.9.2:
----------------------------------

Misc:
 * Properly bump the version in configure.ac


Changes between 3.0.9 and 3.0.9.1:
----------------------------------

Misc:
 * Fix VLSub returning 401 for earch request


Changes between 3.0.8 and 3.0.9:
----------------------------------

Core:
 * Work around busy looping when playing an invalid item through VLM

Access:
 * Multiple dvdread and dvdnav crashs fixes
 * Fixed DVD glitches on clip change
 * Fixed dvdread commands/data sequence inversion in some cases causing
   unwanted glitches
 * Better handling of authored as corrupted DVD