@@ -65,6 +65,7 @@ Access:
  * Audio CD data tracks are now correctly detected and skipped
  * Deprecates Audio CD CDDB lookups in favor of more accurate Musicbrainz
  * Improved CD-TEXT and added Shift-JIS encoding support
+ * Support for YoutubeDL (where available).
 
 Access output:
  * Added support for the RIST (Reliable Internet Stream Transport) Protocol
